--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="nav-link page-scroll" href="#features">TENTANG</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">--------</a>
+                        <a class="nav-link page-scroll" href="#our-team">STRUKTUR</a>
                     </li>
 
                     <!-- Dropdown Menu -->          
@@ -511,21 +511,14 @@
               <!-- Anggota Tim Bagian Pertama -->
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 1"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 1"/>
                   <h4>John Doe</h4>
                   <p>Position</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 2"
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 2"
                   />
                   <h4>Jane Smith</h4>
                   <p>Position</p>
@@ -533,11 +526,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 3"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 3" />
                   <h4>Mike Johnson</h4>
                   <p>Position</p>
                 </div>
@@ -554,33 +543,21 @@
               <!-- Anggota Tim Bagian kedua -->
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 1"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 1" />
                   <h4>John Doe</h4>
                   <p>Position</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 2"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 2" />
                   <h4>Jane Smith</h4>
                   <p>Position</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 3"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 3" />
                   <h4>Mike Johnson</h4>
                   <p>Position</p>
                 </div>
@@ -597,33 +574,21 @@
               <!-- Anggota Tim Bagian ketiga -->
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 1"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 1" />
                   <h4>John Doe</h4>
                   <p>Position</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 2"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 2" />
                   <h4>Jane Smith</h4>
                   <p>Position</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="team-member">
-                  <img
-                    class="img-fluid"
-                    src="images/testimonial-1.jpg"
-                    alt="Team Member 3"
-                  />
+                  <img class="img-fluid max-width-100" src="images/testimonial-1.jpg" alt="Team Member 3" />
                   <h4>Mike Johnson</h4>
                   <p>Position</p>
                 </div>
@@ -664,33 +629,21 @@
 
     <!-- Footer -->
     <svg class="footer-frame" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 79"><defs><style>.cls-2{fill:#412011;}</style></defs><title>footer-frame</title><path class="cls-2" d="M0,72.427C143,12.138,255.5,4.577,328.644,7.943c147.721,6.8,183.881,60.242,320.83,53.737,143-6.793,167.826-68.128,293-60.9,109.095,6.3,115.68,54.364,225.251,57.319,113.58,3.064,138.8-47.711,251.189-41.8,104.012,5.474,109.713,50.4,197.369,46.572,89.549-3.91,124.375-52.563,227.622-50.155A338.646,338.646,0,0,1,1920,23.467V79.75H0V72.427Z" transform="translate(0 -0.188)"/></svg>
-    <div class="footer">
+    <div id="footer" class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-col first">
-                        <h4>About Tivo</h4>
-                        <p class="p-small">We're passionate about designing and developing one of the best marketing apps in the market</p>
+                        <h4>ALAMAT</h4>
+                        <p></p>
+                        <div class="map-container">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22479.9398641706!2d-122.08051564686945!3d37.38605108041127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbc9c4054ce5d%3A0x22c1c554d6b8870!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1561731310624!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen=""></iframe>
+                        </div>
                     </div>
-                </div> <!-- end of col -->
-                <div class="col-md-4">
-                    <div class="footer-col middle">
-                        <h4>Important Links</h4>
-                        <ul class="list-unstyled li-space-lg p-small">
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Our business partners <a class="white" href="#your-link">startupguide.com</a></div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Read our <a class="white" href="terms-conditions.html">Terms & Conditions</a>, <a class="white" href="privacy-policy.html">Privacy Policy</a></div>
-                            </li>
-                        </ul>
-                    </div>
-                </div> <!-- end of col -->
+                </div>
                 <div class="col-md-4">
                     <div class="footer-col last">
-                        <h4>Contact</h4>
+                        <h4>KONTAK</h4>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-map-marker-alt"></i>
@@ -698,14 +651,43 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
-                                <div class="media-body"><a class="white" href="mailto:contact@tivo.com">contact@tivo.com</a> <i class="fas fa-globe"></i><a class="white" href="#your-link">www.tivo.com</a></div>
+                                <div class="media-body">
+                                    <a class="white" href="mailto:contact@tivo.com">contact@tivo.com</a>
+                                    <i class="fas fa-globe"></i>
+                                    <a class="white" href="#your-link">www.tivo.com</a>
+                                </div>
+                            </li>
+                            <li class="media">
+                                <div class="icon-wrapper">
+                                    <i class="fab fa-instagram"></i> <!-- Perbesar ikon Instagram -->
+                                </div>
+                                <div class="media-body">
+                                    Follow us on Instagram: <a class="white" href="https://www.instagram.com/tivoofficial">@tivoofficial</a>
+                                </div>
+                            </li>
+                            <li class="media">
+                                <div class="icon-wrapper">
+                                    <i class="fab fa-facebook"></i> <!-- Perbesar ikon Facebook -->
+                                </div>
+                                <div class="media-body">
+                                    Like us on Facebook: <a class="white" href="https://www.facebook.com/tivopage">TivoPage</a>
+                                </div>
+                            </li>
+                            <li class="media">
+                                <div class="icon-wrapper">
+                                    <i class="fab fa-twitter"></i> <!-- Perbesar ikon Twitter -->
+                                </div>
+                                <div class="media-body">
+                                    Follow us on Twitter: <a class="white" href="https://www.twitter.com/tivotweets">@tivotweets</a>
+                                </div>
                             </li>
                         </ul>
-                    </div> 
+                    </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
+    </div>
+    <!-- end of footer -->  
     <!-- end of footer -->
 
 
