--- a/index.html
+++ b/index.html
@@ -641,20 +641,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col">
                     <div class="footer-col last">
                         <h4>KONTAK</h4>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <div class="media-body">22 Innovative, San Francisco, CA 94043, US</div>
+                                <div class="media-body">Pasar Minggu</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
                                 <div class="media-body">
-                                    <a class="white" href="mailto:contact@tivo.com">contact@tivo.com</a>
+                                    <a class="white" href="mailto:contact@tivo.com">PanduBangsa@gmail.com</a>
                                     <i class="fas fa-globe"></i>
-                                    <a class="white" href="#your-link">www.tivo.com</a>
+                                    <a class="white" href="#your-link">www.PanduBangsa.com</a>
                                 </div>
                             </li>
                             <li class="media">
@@ -662,7 +662,7 @@
                                     <i class="fab fa-instagram"></i> <!-- Perbesar ikon Instagram -->
                                 </div>
                                 <div class="media-body">
-                                    Follow us on Instagram: <a class="white" href="https://www.instagram.com/tivoofficial">@tivoofficial</a>
+                                    Follow us on Instagram: <a class="white" href="">@PanduBangsa</a>
                                 </div>
                             </li>
                             <li class="media">
@@ -670,7 +670,7 @@
                                     <i class="fab fa-facebook"></i> <!-- Perbesar ikon Facebook -->
                                 </div>
                                 <div class="media-body">
-                                    Like us on Facebook: <a class="white" href="https://www.facebook.com/tivopage">TivoPage</a>
+                                    Like us on Facebook: <a class="white" href="">PanduBangsa</a>
                                 </div>
                             </li>
                             <li class="media">
@@ -678,7 +678,7 @@
                                     <i class="fab fa-twitter"></i> <!-- Perbesar ikon Twitter -->
                                 </div>
                                 <div class="media-body">
-                                    Follow us on Twitter: <a class="white" href="https://www.twitter.com/tivotweets">@tivotweets</a>
+                                    Follow us on Twitter: <a class="white" href="">@PanduBangsaTweets</a>
                                 </div>
                             </li>
                         </ul>
