--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -86,7 +86,7 @@
                     <!-- end of dropdown menu -->
 
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#pricing">KONTAK</a>
+                        <a class="nav-link page-scroll" href="index.html#footer">KONTAK</a>
                     </li>
                 </ul>
             </div>
