--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Partai Pandu Bangsa</title>
+    <title>Beranda - Partai Pandu Bangsa</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -100,7 +100,7 @@
     <header id="header" class="header">
         <div class="header-content">
             <div class="container">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2500">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="4000">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -112,13 +112,24 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row">
+                                <div class="col-lg-6 col-xl-7">
+                                    <div class="image-container">
+                                        <div class="img-wrapper">
+                                            <img class="img-fluid" src="images/header-software-app.png" alt="alternative">
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-lg-6 col-xl-5">
-                                    <div class="text-container">
+                                    <div class="text-container" style="text-align: center;">
                                         <h1>Slide 1</h1>
                                         <p class="p-large">Content for slide 1</p>
                                         <a class="btn-solid-lg page-scroll" href="#">READ MORE</a>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
                                 <div class="col-lg-6 col-xl-7">
                                     <div class="image-container">
                                         <div class="img-wrapper">
@@ -126,40 +137,29 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="row">
                                 <div class="col-lg-6 col-xl-5">
-                                    <div class="text-container">
+                                    <div class="text-container" style="text-align: center;">
                                         <h1>Slide 2</h1>
                                         <p class="p-large">Content for slide 2</p>
                                         <a class="btn-solid-lg page-scroll" href="#">READ MORE</a>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-xl-7">
-                                    <div class="image-container">
-                                        <div class="img-wrapper">
-                                            <img class="img-fluid" src="images/header-software-app.png" alt="alternative">
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row">
-                                <div class="col-lg-6 col-xl-5">
-                                    <div class="text-container">
-                                        <h1>Slide 3</h1>
-                                        <p class="p-large">Content for slide 3</p>
-                                        <a class="btn-solid-lg page-scroll" href="">READ MORE</a>
-                                    </div>
-                                </div>
                                 <div class="col-lg-6 col-xl-7">
                                     <div class="image-container">
                                         <div class="img-wrapper">
                                             <img class="img-fluid" src="images/header-software-app.png" alt="alternative">
                                         </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-xl-5">
+                                    <div class="text-container" style="text-align: center;">
+                                        <h1>Slide 3</h1>
+                                        <p class="p-large">Content for slide 3</p>
+                                        <a class="btn-solid-lg page-scroll" href="#">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -243,13 +243,13 @@
                     <!-- Tabs Links -->
                     <ul class="nav nav-tabs" id="argoTabs" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true"><i class="fas fa-envelope-open-text"></i>SEJARAH</a>
+                            <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">SEJARAH</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false"><i class="fas fa-list"></i>VISI MISI</a>
+                            <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">VISI MISI</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false"><i class="fas fa-chart-bar"></i>MAKNA LOGO</a>
+                            <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">MAKNA LOGO</a>
                         </li>
                     </ul>
                     <!-- end of tabs links -->
@@ -269,7 +269,7 @@
                                     <div class="text-container">
                                         <h3>SEJARAH</h3>
                                         <p>Perjalanan kehidupan bangsa dan negara sejak proklamasi tanggal 17 Agustus tahun 1945 hingga hari ini harus dimaknai sebagai susunan perjalanan sejarah yang harus terus disempurnakan demi mewujudkan cita-cita bangsa indonesia. </p>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
+                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">SELENGKAPNYA</a>
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
@@ -280,13 +280,8 @@
                         <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <div class="image-container text-center">
-                                        <img class="img-fluid" src="images/features-2.png" alt="alternative">
-                                    </div> <!-- end of image-container -->
-                                </div> <!-- end of col -->
-                                <div class="col-lg-6">
                                     <div class="text-container">
-                                        <h3>VISI MISI</h3>
+                                        <h3>VISI</h3>
                                         <p>Campaigns monitoring is a feature we've developed since the beginning because it's at the core of Tivo and basically to any marketing activity focused on results.</p>
                                         <ul class="list-unstyled li-space-lg">
                                             <li class="media">
@@ -302,11 +297,31 @@
                                                 <div class="media-body">Evaluate campaign results and optimize future actions</div>
                                             </li>
                                         </ul>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">LIGHTBOX</a>
+                                    </div>
+                                </div> <!-- end of col -->
+                                <div class="col-lg-6">
+                                    <div class="text-container">
+                                        <h3>MISI</h3>
+                                        <p>Campaigns monitoring is a feature we've developed since the beginning because it's at the core of Tivo and basically to any marketing activity focused on results.</p>
+                                        <ul class="list-unstyled li-space-lg">
+                                            <li class="media">
+                                                <i class="fas fa-square"></i>
+                                                <div class="media-body">Easily plan campaigns and schedule their starting date</div>
+                                            </li>
+                                            <li class="media">
+                                                <i class="fas fa-square"></i>
+                                                <div class="media-body">Start campaigns and follow their evolution closely</div>
+                                            </li>
+                                            <li class="media">
+                                                <i class="fas fa-square"></i>
+                                                <div class="media-body">Evaluate campaign results and optimize future actions</div>
+                                            </li>
+                                        </ul>
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
-                        </div> <!-- end of tab-pane -->
+                        </div>
+                        <!-- end of tab-pane -->
                         <!-- end of tab -->
 
                         <!-- Tab -->
@@ -314,28 +329,27 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="image-container text-center">
-                                        <img class="img-fluid" src="images/features-3.png" alt="alternative">
+                                        <img class="img-fluid" src="images/1698745444569.png" alt="alternative" width="350" height="350">
                                     </div> <!-- end of image-container -->
                                 </div> <!-- end of col -->
                                 <div class="col-lg-6">
                                     <div class="text-container">
                                         <h3>MAKNA LOGO</h3>
-                                        <p>Analytics control  panel is important for every marketing team so it's beed implemented from the begging and designed to produce reports based on very little input information.</p>
                                         <ul class="list-unstyled li-space-lg">
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">If you set it up correctly you will get acces to great intel</div>
+                                                <div class="media-body">Kotak segi empat melambangkan empat pilar kebangsaan yakni Pancasila</div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">Easy to integrate in your websites and landing pages</div>
+                                                <div class="media-body">Lingkaran melambangkan kebulatan tekad dan kekompakan</div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">The generated reports are important for your strategy</div>
+                                                <div class="media-body">Coklat memiliki arti Kejujuran yang melambangkan warna bumi</div>
                                             </li>
                                         </ul>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-3">LIGHTBOX</a>
+                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-3">SELENGKAPNYA</a>
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
@@ -637,7 +651,7 @@
                         <h4>ALAMAT</h4>
                         <p></p>
                         <div class="map-container">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22479.9398641706!2d-122.08051564686945!3d37.38605108041127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbc9c4054ce5d%3A0x22c1c554d6b8870!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1561731310624!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen=""></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22479.9398641706!2d-122.08051564686945!3d37.38605108041127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbc9c4054ce5d%3A0x22c1c554d6b8870!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1561731310624!5m2!1sen!2sus" width="500" height="400" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
                 </div>
