--- a/article-details.html
+++ b/article-details.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Article Details - Tivo - SaaS App HTML Landing Page Template</title>
+    <title>Artikel - Partai Pandu Bangsa</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -29,7 +29,7 @@
     <link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/1698745444569.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
